# triple-screening

./: 0.26.0  README.md  collecting_headlines (v1).ipynb  database_building.ipynb  model_building  model_finetuning.ipynb  model_training.ipynb  new_scrapper.js  news_data.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  stock_data.py  use_case.ipynb  yfinacne_scraper.ipynb
experimentation/: abstract_ws.py  collecting_headlines (v1).ipynb  extractor.ipynb  extractor.py  model_finetuning.ipynb  test_spider.ipynb  wsj_spider_test.ipynb  wsj_testing.ipynb
pipelines/: datapipeline.ipynb
results/runs/Jun26_14-32-07_MacBookPro/: events.out.tfevents.1750966328.MacBookPro.91005.0
triple_screening.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
